<resources>
    <string name="app_name">六合运势</string>
    <string name="kj_main_zbb_2">準備報嗎，請稍後...</string>
    <string name="kj_main_zzk_3">正在開獎，點擊觀看...</string>
    <string name="kj_main_ggz_4">廣告中(六合管家下載地址:16808.com)</string>
    <string name="kj_main_zzk_5">主持人講話中(六合管家下載地址:16808.com)</string>
    <string name="net_error">網絡錯誤~</string>

    <!-- 图片查看器 -->
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="folder_all">所有图片</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">超出限制的张数,不可再选</string>

    <!-- error -->
    <string name="component_dockbar_null_intent">数据异常</string>
    <string name="component_activity_not_found">您的手机上未安装应用程序。</string>
    <string name="connectionerror">NoConnectionError</string>
    <string name="null_error">数据为空</string>

    <!--main_item-->
    <string name="name1">历史记录</string>
    <string name="name2">开奖日期</string>
    <string name="name3">论坛</string>
    <string name="name4">玄机</string>
    <string name="name5">资料</string>
    <string name="name6">图库</string>
    <string name="text1">回顾开奖结果</string>
    <string name="text2">把握准确的时间</string>
    <string name="text3">第一手专家</string>
    <string name="text4">精准的玄机预测</string>
    <string name="text5">丰富的爆料</string>
    <string name="text6">全面的图料</string>

    <!-- 1.正式地址 -->
    <!-- 2.图片加载 -->
    <string name="all_url">http://app.admin.mahuiapp.com:889/zdr_android.json</string>
    <string name="base_url">http://wap.jizhou56.com:8090</string>
    <string name="base_url_ad">http://ad.jizhou56.com:8090</string>
    <string name="base_url_img">http://img.jizhou56.com:8090/</string>
    <string name="base_url_zl">http://ziliao.jizhou56.com:8090/</string>
    <string name="base_url_kj">http://app.jizhou56.com:8090/</string>

    <!-- 分享dialog -->
    <string name="share_app_name_weixin">微信</string>
    <string name="share_aapp_name_pyq">朋友圈</string>
    <string name="share_aapp_name_qq">QQ</string>
    <string name="share_aapp_name_dx">Qzone</string>
    <string name="invite_tip">邀請好友</string>
    <string name="invite_actionbar_title">邀請</string>
    <string name="invite_two">還可以邀請好友掃描下圖二維碼,直接安裝六合大师哦~(点击图片，保存二维码到本地！)</string>

    <!--老黃歷-->
    <string name="lhl">老黃歷</string>
    <string name="lhl_sm">六合每期吉數黃歷</string>
    <string name="lhl_xzrq">選擇日期</string>
    <!--查詢助手-->
    <string name="lhc_chaxunzhushou">查詢助手</string>
    <string name="lhc_chaxunzhushou_sm">六合資訊集合</string>
    <string name="lhc_chaxun_tjcx">條件查詢</string>
    <string name="lhc_chaxun_xztj">選擇條件</string>
    <string name="lhc_chaxun_lrhm">冷熱號碼查詢</string>
    <string name="lhc_lhcs">六合常識</string>
    <!--走勢分析-->
    <string name="lhc_zsfx">走勢分析</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
