<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEEEEE"
    android:orientation="vertical"
    android:paddingLeft="12.0dip"
    android:paddingRight="12.0dip"
    android:paddingTop="18.0dip">

    <TextView
        android:id="@+id/tv_share_nr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10.0dip"
        android:duplicateParentState="true"
        android:gravity="left"
        android:lineSpacingExtra="4.0dip"
        android:text="@string/invite_two"
        android:textColor="#ff666666"
        android:textSize="15.0sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20.0dip">

        <ImageView
            android:id="@+id/inviteTwoCode1"
            android:layout_width="200.0dip"
            android:layout_height="200.0dip"
            android:gravity="center"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20.0dip">

            <LinearLayout
                android:layout_width="160.0dip"
                android:layout_height="160.0dip"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:id="@+id/inviteTwoCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="#ffffffff"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/dialog_liner_weixin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/invate_shar"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/umeng_socialize_wechat" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/share_app_name_weixin"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_liner_pengyouquan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/invate_shar"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/umeng_socialize_wxcircle" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/share_aapp_name_pyq"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_liner_qq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/invate_shar"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/umeng_socialize_qq" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/share_aapp_name_qq"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_liner_dx"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/invate_shar"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/umeng_socialize_qzone" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/share_aapp_name_dx"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>